@@ -334,7 +334,10 @@
 	<data name="ValueNotSupportedForGuid" xml:space="preserve">
     <value>The requested column value could not be treated as or conveted to a Guid.</value>
   </data>
-	<data name="UnableToRetrieveParameters" xml:space="preserve">
+  <data name="UnableToDeriveParameters" xml:space="preserve">
+    <value>Unable to derive stored routine parameters.  The 'Parameters' information schema table is not available and access to the stored procedure body has been disabled.</value>
+  </data>
+  <data name="UnableToRetrieveParameters" xml:space="preserve">
     <value>Unable to retrieve stored routine parameters.  Either grant access to the routine or add the 'Use Procedure Bodies=false' option to your connection string.</value>
   </data>
 	<data name="UnableToEnumerateUDF" xml:space="preserve">    
